@@ -36,8 +36,6 @@
     <property name="build.src.java" value="${basedir}/src/java"/>
     <property name="build.src.antlr" value="${basedir}/src/antlr"/>
     <property name="build.src.jdkoverride" value="${basedir}/src/jdkoverride" />
-    <property name="build.src.java8" value="${basedir}/src/java8"/>
-    <property name="build.src.java11" value="${basedir}/src/java11"/>
     <property name="build.src.resources" value="${basedir}/src/resources"/>
     <property name="build.src.gen-java" value="${basedir}/src/gen-java"/>
     <property name="build.lib" value="${basedir}/lib"/>
@@ -872,7 +870,7 @@
         depends="maven-ant-tasks-retrieve-build,build-project" description="Compile Cassandra classes"/>
     <target name="codecoverage" depends="jacoco-run,jacoco-report" description="Create code coverage report"/>
 
-    <target name="_build_java8_only" if="java.version.8">
+    <target name="_build_java8" if="java.version.8">
         <echo message="Compiling only for Java 8 ..."/>
         <!-- Order matters! -->
         <javac fork="true"
@@ -887,7 +885,6 @@
                destdir="${build.classes.main}" includeantruntime="false" source="${source.version}" target="${target.version}"
                memorymaximumsize="512M">
             <src path="${build.src.java}"/>
-            <src path="${build.src.java8}"/>
             <src path="${build.src.gen-java}"/>
             <compilerarg value="-XDignore.symbol.file"/>
             <classpath>
@@ -895,9 +892,12 @@
             </classpath>
         </javac>
     </target>
-    <target name="_build_multi_java" unless="java.version.8">
+    <target name="_build_java11" unless="java.version.8">
         <!-- Note: we cannot use javac's 'release' option, as that does not allow accessing sun.misc.Unsafe nor
         Nashorn's ClassFilter class as any javac modules option is invalid for relase 8. -->
+        <fail message="JAVA8_HOME env variable must be set when building with java >= 11">
+            <condition><not><isset property="env.JAVA8_HOME"/></not></condition>
+        </fail>
         <echo message="Compiling for Java 8 (using ${env.JAVA8_HOME}/bin/javac) ..."/>
         <javac fork="true"
                debug="true" debuglevel="${debuglevel}" encoding="utf-8"
@@ -905,21 +905,7 @@
                executable="${env.JAVA8_HOME}/bin/javac"
                memorymaximumsize="512M">
             <src path="${build.src.java}"/>
-            <src path="${build.src.java8}"/>
             <src path="${build.src.gen-java}"/>
-            <compilerarg value="-XDignore.symbol.file"/>
-            <classpath>
-                <path refid="cassandra.classpath"/>
-            </classpath>
-        </javac>
-        <echo message="Compiling for current java version ..."/>
-        <javac fork="true"
-               debug="true" debuglevel="${debuglevel}" encoding="utf-8"
-               destdir="${build.classes.main}/META-INF/versions/11" includeantruntime="false"
-               memorymaximumsize="512M">
-            <src path="${build.src.java11}"/>
-            <compilerarg value="--release"/>
-            <compilerarg value="${release.version}"/>
             <compilerarg value="-XDignore.symbol.file"/>
             <classpath>
                 <path refid="cassandra.classpath"/>
@@ -930,8 +916,8 @@
             name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
         <!-- Order matters! -->
-        <antcall target="_build_java8_only"/>
-        <antcall target="_build_multi_java"/>
+        <antcall target="_build_java8"/>
+        <antcall target="_build_java11"/>
         <antcall target="createVersionPropFile"/>
         <copy todir="${build.classes.main}">
             <fileset dir="${build.src.resources}" />
@@ -1087,9 +1073,6 @@
           <fileset dir="${build.src.java}" defaultexcludes="yes">
             <include name="org/apache/**/*.java"/>
           </fileset>
-          <fileset dir="${build.src.java11}" defaultexcludes="yes">
-            <include name="org/apache/**/*.java"/>
-          </fileset>
           <fileset dir="${build.src.gen-java}" defaultexcludes="yes">
             <include name="org/apache/**/*.java"/>
           </fileset>
@@ -1114,9 +1097,6 @@
       </jar>
       <jar jarfile="${build.dir}/${final.name}-sources.jar">
         <fileset dir="${build.src.java}" defaultexcludes="yes">
-          <include name="org/apache/**/*.java"/>
-        </fileset>
-        <fileset dir="${build.src.java11}" defaultexcludes="yes">
           <include name="org/apache/**/*.java"/>
         </fileset>
         <fileset dir="${build.src.gen-java}" defaultexcludes="yes">
@@ -1299,7 +1279,13 @@
   </target>
 
   <target name="build-test" depends="_main-jar, stress-build, write-poms" description="Compile test classes">
+    <antcall target="_build-test_java8"/>
+    <antcall target="_build-test_java11"/>
+  </target>
+
+  <target name="_build-test_java8" if="java.version.8">
     <javac
+     fork="true"
      compiler="modern"
      debug="true"
      debuglevel="${debuglevel}"
@@ -1308,6 +1294,35 @@
      source="${source.version}"
      target="${target.version}"
      encoding="utf-8">
+     <classpath>
+        <path refid="cassandra.classpath"/>
+     </classpath>
+     <compilerarg value="-XDignore.symbol.file"/>
+     <src path="${test.unit.src}"/>
+     <src path="${test.long.src}"/>
+     <src path="${test.burn.src}"/>
+     <src path="${test.microbench.src}"/>
+     <src path="${test.distributed.src}"/>
+    </javac>
+
+    <!-- Non-java resources needed by the test suite -->
+    <copy todir="${test.classes}">
+      <fileset dir="${test.resources}"/>
+    </copy>
+  </target>
+
+  <target name="_build-test_java11" unless="java.version.8">
+    <javac
+     fork="true"
+     compiler="modern"
+     debug="true"
+     debuglevel="${debuglevel}"
+     destdir="${test.classes}"
+     includeantruntime="true"
+     source="${source.version}"
+     target="${target.version}"
+     encoding="utf-8"
+     executable="${env.JAVA8_HOME}/bin/javac">
      <classpath>
         <path refid="cassandra.classpath"/>
      </classpath>
